--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,5 @@
 server.port=8887
+
+github.client.id=471fee6a7175805b4e2c
+github.client.secret=4e3ee3c32873e8a2aa6e1e0d234e97108db0aeb8
+github.redirect.uri=http://localhost:8887/callback
