--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,7 @@ server.port=8887
 github.client.id=471fee6a7175805b4e2c
 github.client.secret=4e3ee3c32873e8a2aa6e1e0d234e97108db0aeb8
 github.redirect.uri=http://localhost:8887/callback
+spring.datasource.url=jdbc:h2:D:/IdeaProjects/database/community
+spring.datasource.username=dzc
+spring.datasource.password=dzc
+spring.datasource.driver-class-name=org.h2.Driver
