--- a/pom.xml
+++ b/pom.xml
@@ -77,6 +77,12 @@
             <version>2.1.1</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.10</version>
+        </dependency>
+
     </dependencies>
 
     <build>
