--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,4 @@ spring.datasource.url=jdbc:h2:D:/IdeaProjects/community/database/community
 spring.datasource.username=dzc
 spring.datasource.password=dzc
 spring.datasource.driver-class-name=org.h2.Driver
+mybatis.configuration.map-underscore-to-camel-case=true
