add MyBatis Generator

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,5 @@ spring.datasource.username=dzc
 spring.datasource.password=dzc
 spring.datasource.driver-class-name=org.h2.Driver
 mybatis.configuration.map-underscore-to-camel-case=true
+mybatis.type-aliases-package=issc.zcdong.community.mapper
+mybatis.mapper-locations=classpath:mapper/*.xml
