--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,13 @@
 server.port=8887
-
 github.client.id=471fee6a7175805b4e2c
 github.client.secret=4e3ee3c32873e8a2aa6e1e0d234e97108db0aeb8
 github.redirect.uri=http://localhost:8887/callback
+ucloud.ufile.public-key=
+ucloud.ufile.private-key=
+ucloud.ufile.bucket-name=zcdong
+ucloud.ufile.region=cn-bj
+ucloud.ufile.suffix=ufileos.com
+ucloud.ufile.expires=315360000
 spring.datasource.url=jdbc:h2:D:/IdeaProjects/community/database/community
 spring.datasource.username=dzc
 spring.datasource.password=dzc
