--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,3 +15,8 @@ spring.datasource.driver-class-name=org.h2.Driver
 mybatis.configuration.map-underscore-to-camel-case=true
 mybatis.type-aliases-package=issc.zcdong.community.mapper
 mybatis.mapper-locations=classpath:mapper/*.xml
+logging.file.name=logs/community.log
+logging.level.root=info
+logging.level.issc.zcdong.community.mapper=debug
+logging.file.max-size=200MB
+logging.file.max-history=30
