change UFile properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,8 +2,8 @@ server.port=8887
 github.client.id=471fee6a7175805b4e2c
 github.client.secret=4e3ee3c32873e8a2aa6e1e0d234e97108db0aeb8
 github.redirect.uri=http://localhost:8887/callback
-ucloud.ufile.public-key=
-ucloud.ufile.private-key=
+ucloud.ufile.public-key=TOKEN_0292b0e1-f9a3-40ae-8d39-6bd206e3ed3e
+ucloud.ufile.private-key=dc9a64aa-8ef0-4874-959f-23c4e1609fb9
 ucloud.ufile.bucket-name=zcdong
 ucloud.ufile.region=cn-bj
 ucloud.ufile.suffix=ufileos.com
