--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,7 +11,7 @@ ucloud.ufile.expires=315360000
 spring.datasource.url=jdbc:h2:D:/IdeaProjects/community/database/community
 spring.datasource.username=dzc
 spring.datasource.password=dzc
-spring.datasource.driver-class-name=org.h2.Driver
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 mybatis.configuration.map-underscore-to-camel-case=true
 mybatis.type-aliases-package=issc.zcdong.community.mapper
 mybatis.mapper-locations=classpath:mapper/*.xml
